feat: expose license request APIs
